# gallium-rs

./: .dockerignore  .env.sample  .gitignore  .lvimrc  .vimrc  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
conf/: .env  config.json  nginx.conf  show_authorized_keys.sh  supervisord.conf
docker/dev/: Dockerfile  docker_entrypoint.sh  mkschema.sh
docker/gallium/: Dockerfile  docker_entrypoint.sh
docker/sshd/: Dockerfile  show_authorized_keys.sh  sshd_config
migrations/20170619122914_create_public_key_table/: down.sql  up.sql
migrations/20170621183535_create_user_table/: down.sql  up.sql
migrations/20170622084527_add_title_column_to_public_key/: down.sql  up.sql
migrations/20170622182705_create_project_table/: down.sql  up.sql
migrations/20170624173512_modify_user_table/: down.sql  up.sql
migrations/20170625101132_change_default_column_value_of_project/: down.sql  up.sql
migrations/20170627101436_add_admin_switch_for_user/: down.sql  up.sql
migrations/20170627114632_create_application_table/: down.sql  up.sql
migrations/20170627134823_rename_oauth_app/: down.sql  up.sql
migrations/20170627174852_add_redirect_uri_to_oauth_app/: down.sql  up.sql
migrations/20170628083927_add_client_secret/: down.sql  up.sql
migrations/20170628131132_create_access_token_table/: down.sql  up.sql
migrations/20170628134953_remove_description_from_access_tokens/: down.sql  up.sql
migrations/20170628140613_add_user_id_to_oauth_apps/: down.sql  up.sql
migrations/20170628183757_rename_oauth_apps_to_apps/: down.sql  up.sql
migrations/20170630153653_reinitialize_tables/: down.sql  up.sql
migrations/20170702085501_add_unique_constraint_to_project_table/: down.sql  up.sql
pkg/iron-router-codegen/: Cargo.toml
pkg/iron-router-ext/: Cargo.toml
scripts/: add_dummy_data.sh  build.sh  cargo.sh  diesel.sh  docker-run-notty.sh  docker-run.sh  mkschema.sh  psql.sh  sync_src.sh
src/: api.rs  app.rs  authorization_code.rs  config.rs  crypto.rs  db.rs  error.rs  git.rs  lib.rs  models.rs  oauth.rs  routes.rs  schema.rs  server.rs
src/api/: mod.rs
src/api/v1/: auth.rs  (+6 more)
src/middleware/: auth.rs  authentication.rs
src/middlewares/: app.rs
src/models/: access_tokens.rs  application.rs  apps.rs  mod.rs  oauth_apps.rs  project.rs  projects.rs  public_key.rs  public_keys.rs  repository.rs  scope.rs  ssh_keys.rs  user.rs  users.rs
src/routes/: api.rs  git.rs  mod.rs  oauth.rs
(+21 files in other folders)
