[package]
name = "gallium"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[lib]
name = "gallium"
path = "src/lib.rs"
doc = true

[[bin]]
name = "server"
path = "src/bin/server.rs"
doc = false

[[bin]]
name = "pubkey"
path = "src/bin/pubkey.rs"
doc = false

[dependencies]
clap = "~2.24"
diesel = { version = "~0.13", features = ["postgres","chrono"] }
diesel_codegen = { version = "~0.13", features = ["postgres"] }
chrono = "~0.3"
iron = "~0.5"
hyper = "~0.10"
router = "~0.5"
mount = "~0.3"
bodyparser = "~0.7"
regex = "~0.2"
flate2 = "*"
shlex = "*"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
bcrypt = "*"
r2d2 = "*"
r2d2-diesel = "*"
users = "*"
git2 = { version = "~0.6", default-features = false, features = [] }
uuid = { version = "~0.5", features = ["v4"] }
jsonwebtoken = "*"
error-chain = "*"
ring = "*"
url = "~1.5"
base64 = "~0.6"

iron-router-ext = { path = "pkg/iron-router-ext" }
iron-router-codegen = { path = "pkg/iron-router-codegen" }
